[package]
name = "sshc-russh-test"
version = "0.1.0"
edition = "2021"

[dependencies]
russh = "0.46" # russh is kinda weird and needs ye to get like 2 more carates + tokio to do any useful key stuff
russh-keys = { version = "0.46", default-features = false } 
ed25519-dalek = { version = "2.1", default-features = false }

tokio = { version = "1.41", default-features = false, features = ["sync", "fs", "io-util"] }
async-trait = "0.1" # grrrr >:(

serde = { version = "1.0", features = ["derive", "rc"] }
# toml = "0.8"    # not currently used. mayhaps use for the config file?
bincode = "1.3" # find a better way to store server state at some point?
bitflags = { version = "2.6", features = ["serde"] }
rand = "0.8.5" # password gen. rand might be an overkill as we dont need high quality randomness

# ze time
chrono = "0.4"
humantime = "2.1"


# the usual :p
[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true
debug = false
